sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i=0
  var v=0
  for(i <- 1 to getNombreValeurs()-1){
    v=i
    while(i-1>v){
      i=i-1
    }
    i=v
  }
}